--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,7 @@
     <script src="nui://game/ui/jquery.js" type="text/javascript"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <link href="http://fonts.cdnfonts.com/css/gilroy-bold" rel="stylesheet">
-    <title>u_identity</title>
+    <title>cloud_identity</title>
 </head>
 <style>
     :root {
@@ -29,7 +29,7 @@
     }
 </style>
 <body>
-    <div id="container">
+    <div id="container" style="display: none;">
         <img src="img/bg.jpg" id="bg">
         <div id="warning" style="display: none;">
             <p id="warningText"></p>
